--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This project is really amazing,fam!
+This project was really amazing,fam!
 
 this project is an introduction to Git and version control
